Modo claro/oscuro

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,14 @@
 
 /* ----------------- COLORES VARIABLES CSS----------------- */
 :root {
-  --color-negro: #1b1a19;
-  --color-blanco: #eaeaea;
-  --color-crema: #e1ca53;
+  --color-primario: rgb(27, 26, 25);
+  --color-secundario: rgb(234, 234, 234);
+  --color-terciario: rgb(225, 202, 83);
+  --color-1-op50: rgba(0, 0, 0, 0.5);
+  --color-1-op100: rgb(0, 0, 0);
 }
 
-/* ----------------- UNIVERSALES----------------- */
+/* ----------------- UNIVERSALES ----------------- */
 * {
   padding: 0;
   margin: 0;
@@ -24,10 +26,70 @@ main {
   padding-top: 3.33rem;
 }
 
-/* HEADER BOOTSTRAP */ 
+/* ----------------- TOGGLERS ----------------- */
+#toggleMode {
+  visibility: hidden;
+}
+
+.toggleDark,
+.toggleLight {
+  cursor: pointer;
+  position: fixed;
+  z-index: 2;
+  top: 17px;
+  left: 10px;
+}
+
+.toggleDark {
+  display: block;
+  color: var(--color-terciario);
+}
+
+.toggleDark:hover {
+  color: rgb(83, 152, 225);
+  transition: 0.2s;
+}
+
+.toggleLight:hover {
+  color: var(--color-terciario);
+  transition: 0.2s;
+}
+
+.toggleLight {
+  display: none;
+  color: rgb(83, 152, 225);
+}
+
+#toggleMode:checked ~ .toggleDark {
+  display: none;
+}
+
+#toggleMode:checked ~ .toggleLight {
+  display: block;
+}
+
+/* ----------------- CONTAINER ----------------- */
+
+#container {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  z-index: 1;
+}
+
+#toggleMode:checked ~ #container {
+  --color-primario: rgb(234, 234, 234);
+  --color-secundario: rgb(27, 26, 25);
+  --color-terciario: rgb(83, 152, 225);
+  --color-1-op50: rgba(220, 220, 220, 0.5);
+  --color-1-op100: rgb(220, 220, 220, 0.9);
+}
+
+/* ----------------- HEADER BOOTSTRAP ----------------- */
 
 header nav.navbar {
-  background-color: var(--color-negro);
+  background-color: var(--color-primario);
 }
 
 .navbar-nav.ms-auto {
@@ -37,10 +99,12 @@ header nav.navbar {
 .navbar-brand {
   font-weight: 200;
   font-size: 1.8rem;
+  color: var(--color-secundario);
+  margin-left: 20px;
 }
 
 .navbar-brand:hover {
-  color: var(--color-crema);
+  color: var(--color-terciario);
   transition: 0.2s;
 }
 
@@ -49,48 +113,46 @@ header nav.navbar {
 }
 
 .navbar-toggler {
-  color: var(--color-negro);
+  color: var(--color-primario);
 }
 
 .fas.fa-bars {
-  color: var(--color-blanco);
+  color: var(--color-secundario);
   font-size: 1.7rem;
 }
 
 .fas.fa-bars:hover {
-  color: var(--color-crema);
+  color: var(--color-terciario);
   transition: 0.2s;
 }
 
 .navbar-nav {
-width: 100%;
-justify-content: space-evenly;
+  width: 100%;
+  justify-content: space-evenly;
 }
 
 .navbar-nav a {
-  color: var(--color-blanco);
+  color: var(--color-secundario);
   font-weight: 200;
-  width: 7rem;
+  width: 6rem;
   text-align: center;
   margin: 0.2rem;
 }
 
 a[aria-current="page"] {
-  background-color: var(--color-crema);
-  color: var(--color-negro);
+  background-color: var(--color-terciario);
+  color: var(--color-primario);
 }
 
 .nav-link:hover {
-  background-color: var(--color-crema);
-  color: var(--color-negro);
+  background-color: var(--color-terciario);
+  color: var(--color-primario);
   transition: 0.2s;
 }
 
 header .logo-2 {
   display: none;
 }
-
-
 
 /* ----------------- TITULOS Y TEXTOS UNIVERSALES----------------- */
 h1,
@@ -99,7 +161,7 @@ h3,
 h4,
 p,
 a {
-  color: var(--color-blanco);
+  color: var(--color-secundario);
 }
 
 h1,
@@ -150,7 +212,7 @@ a {
 
 /* ----------------- FOOTER UNIVERSAL----------------- */
 footer {
-  background-color: var(--color-negro);
+  background-color: var(--color-primario);
   display: flex;
   justify-content: space-between;
   padding: 0.8rem;
@@ -165,7 +227,7 @@ footer div#redes ul {
 }
 
 footer div#redes ul li a:hover {
-  color: var(--color-crema);
+  color: var(--color-terciario);
   transition: 0.2s;
 }
 
@@ -178,7 +240,7 @@ footer div#redes ul li a:hover {
 }
 
 main#index {
-  background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(var(--color-1-op100), var(--color-1-op50)),
     url(../assets/img/background/1.png);
   background-size: cover;
   background-position: center;
@@ -236,9 +298,8 @@ main#index {
 }
 
 .main .section2 .divisor .divisor-texto h3 {
-padding: 0;
+  padding: 0;
 }
-
 
 /* ----------------- INDEX.HTML SECCION 3 ----------------- */
 .main .section3 {
@@ -268,7 +329,7 @@ padding: 0;
   height: 20rem;
   gap: 2px;
   object-fit: cover;
-  border: 1px solid var(--color-crema);
+  border: 1px solid var(--color-terciario);
 }
 
 .main .section3 .divisor3 {
@@ -280,22 +341,22 @@ padding: 0;
   width: 80%;
   margin-top: 40px;
   border-radius: 20px;
-  border: solid 1px var(--color-negro);
+  border: solid 1px var(--color-primario);
 }
 
 /* ----------------- #MUSICA = PIANO.HTML / CANTO.HTML / VIOLIN.HTML ----------------- */
 main.piano {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(var(--color-1-op100), var(--color-1-op50)),
     url(../assets/img/background/1.png);
 }
 
 main.canto {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(var(--color-1-op100), var(--color-1-op50)),
     url(../assets/img/background/4.jpg);
 }
 
 main.violin {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(var(--color-1-op100), var(--color-1-op50)),
     url(../assets/img/background/1.jpg);
 }
 
@@ -320,14 +381,14 @@ main#musica .divisor-1 section div img {
   height: auto;
   object-fit: cover;
   border-radius: 20px;
-  border: solid 1px var(--color-crema);
+  border: solid 1px var(--color-terciario);
   margin: 3rem;
 }
 
 /* ----------------- #MUSICA DIVISOR 2 ----------------- */
 main#musica .divisor-2 {
-  width: 14rem;
-  margin-left: 4rem;
+  width: 10rem;
+  margin-left: 2rem;
   position: sticky;
   top: 5rem;
 }
@@ -336,7 +397,8 @@ main#musica .divisor-2 .section3 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 2rem;
+  gap: 1rem;
+  align-items: center;
 }
 
 main#musica .divisor-2 .section3 h3 {
@@ -347,16 +409,16 @@ main#musica .divisor-2 .section3 img {
   width: 10rem;
   margin: auto;
   border-radius: 10px;
-  border: solid 1px var(--color-crema);
+  border: solid 1px var(--color-terciario);
 }
 
 main#musica .divisor-2 .section3 a {
-  background-color: var(--color-negro);
-  color: var(--color-blanco);
-  padding: 1.5em;
-  width: auto;
+  background-color: var(--color-primario);
+  color: var(--color-secundario);
+  padding: 1em;
+  max-width: 8rem;
   border-radius: 10px;
-  border: solid 1px var(--color-crema);
+  border: solid 1px var(--color-terciario);
   font-weight: 300;
   text-transform: uppercase;
   display: flex;
@@ -367,14 +429,14 @@ main#musica .divisor-2 .section3 a {
 }
 
 main#musica .divisor-2 .section3 a:hover {
-  color: var(--color-negro);
-  background-color: var(--color-crema);
+  color: var(--color-primario);
+  background-color: var(--color-terciario);
   transition: 0.2s;
 }
 
 /* ----------------------------------- CONTACTO.HTML ---------------------------------- */
 main.contacto {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(var(--color-1-op100), var(--color-1-op50)),
     url(../assets/img/background/2.jpg);
   background-size: cover;
   background-position: center;
@@ -418,7 +480,7 @@ main.contacto .contenedor .section3 form {
 }
 
 main.contacto .contenedor .section3 form label {
-  color: var(--color-blanco);
+  color: var(--color-secundario);
   padding: 4px;
   letter-spacing: 0.25rem;
 }
@@ -431,18 +493,34 @@ main.contacto .contenedor .section3 form button {
   min-height: 1.4rem;
   margin: auto;
   letter-spacing: 1px;
-  text-align: center;
 }
 
-main.contacto .contenedor .section3 form button {
+main.contacto .contenedor .section3 form input,
+main.contacto .contenedor .section3 form textarea {
+  font-style: italic;
+}
+
+/* main.contacto .contenedor .section3 form button {
   width: 8rem;
   padding: 0.4em;
+} */
+
+main.contacto .contenedor .section3 form button {
+  background-color: var(--color-primario);
+  color: var(--color-secundario);
+  padding: 0.8em;
+  border-radius: 10px;
+  border: solid 1px var(--color-terciario);
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 main.contacto .contenedor .section3 form button:hover,
 main.contacto .contenedor .section3 form input:hover,
 main.contacto .contenedor .section3 form textarea:hover {
-  background-color: var(--color-crema);
+  background-color: var(--color-terciario);
+  color: var(--color-primario);
   transition: 0.2s;
 }
 
@@ -455,7 +533,7 @@ main.contacto .contenedor .section3 form .checkbox {
 
 main.contacto .contenedor .section3 form .checkbox input#checkbox {
   width: 1.1rem;
-  accent-color: var(--color-crema);
+  accent-color: var(--color-terciario);
 }
 
 @media (max-width: 992px) {
@@ -535,13 +613,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     align-items: center;
   }
 
-  main#musica .divisor-1 .section1 .texto1,
-  main#musica .divisor-1 .section2 .texto2,
-  main#musica .divisor-1 .section3 .texto3 {
-    width: 100%;
-    padding: 1rem;
-  }
-
   main#musica .divisor-1 section div img {
     max-width: 22rem;
     width: 100%;
@@ -558,7 +629,7 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     margin: auto;
   }
 
-  main#musica .divisor-2 .section3  {
+  main#musica .divisor-2 .section3 {
     display: flex;
     flex-direction: row;
     align-items: center;
