--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@
   cursor: pointer;
   position: fixed;
   top: 60px;
-  left: 10px;
+  left: 14px;
 }
 
 .toggleDark {
@@ -255,20 +255,25 @@ main#index {
 .section-top img {
   width: 100%;
   height: 100%;
+  max-height: 20rem;
   object-fit: cover;
 }
 
 /* ----------------- INDEX.HTML SECCION 1----------------- */
 .main .section1 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 2rem;
   width: 100%;
+  max-width: 1400px;
+  padding-left: 1rem;
+  padding-right: 1rem;
   margin: auto;
 }
 
 /* ----------------- INDEX.HTML SECCION 2----------------- */
 .main .section2 {
   width: 100%;
+  max-width: 1400px;
+  margin: auto;
   display: flex;
   justify-content: space-around;
   gap: 0.1rem;
@@ -300,6 +305,8 @@ main#index {
 /* ----------------- INDEX.HTML SECCION 3 ----------------- */
 .main .section3 {
   width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -308,6 +315,7 @@ main#index {
 
 .main .section3 .divisor1 {
   width: 100%;
+  max-width: 1400px;
   margin: auto;
   vertical-align: middle;
   padding-top: 4rem;
@@ -364,6 +372,7 @@ main#musica {
   display: flex;
   align-items: flex-start;
   padding-top: 5rem;
+  padding-bottom: 2rem;
 }
 
 /* ----------------- #MUSICA DIVISOR 1 ----------------- */
@@ -446,6 +455,10 @@ main.contacto {
   padding-top: 3rem;
 }
 
+main.contacto .contenedor p {
+  padding: 1rem;
+}
+
 .contenedor {
   display: grid;
   min-height: auto;
@@ -501,11 +514,6 @@ main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form textarea {
   font-style: italic;
 }
-
-/* main.contacto .contenedor .section3 form button {
-  width: 8rem;
-  padding: 0.4em;
-} */
 
 main.contacto .contenedor .section3 form button {
   background-color: var(--color-primario);
@@ -582,7 +590,6 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     width: 100%;
     height: 10rem;
   }
-
   /* ----------------- INDEX.HTML SECCION 2----------------- */
   .main .section2 .divisor {
     width: 24rem;
@@ -697,6 +704,7 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   h3 {
     font-size: 1.1rem;
     font-weight: bold;
+margin: auto;
   }
 
   p {
@@ -776,9 +784,9 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     font-size: 0.9rem;
   }
 }
-/* ----------------- MEDIAQUERIES 280px----------------- */
+/* ----------------- MEDIAQUERIES 290px----------------- */
 
-@media (max-width: 280px) {
+@media (max-width: 290px) {
   /* ----------------- HEADER UNIVERSAL----------------- */
   header .logo {
     display: none;
